# Workdir

./: .gitignore  404.html  CONTRIBUTING.md  README.md  README_PACKAGING.md  SECURITY.md  index.html  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: appimage.yml  aur-source.yml  aur.yml  bandit.yml  deb.yml  docs.yml  flatpak.yml  gh-pages.yml  package-smoke.yml  release-orchestrator.yml  release.yml  rpm.yml  ruff.yml  trivy.yml
data/: io.github.dseichter.workdir.desktop  io.github.dseichter.workdir.metainfo.xml
development/: index.html
docs/: mkdocs.yml  zensical.toml
docs/docs/: development.md  index.md  installation.md  known_issues.md
icons/: generate_icon.py
installation/: index.html
known_issues/: index.html
packaging/aur/: PKGBUILD  PKGBUILD.source  README.md
packaging/debian/: README.md  changelog  control  copyright  rules
packaging/flatpak/: FLATHUB_SUBMISSION.md  io.github.dseichter.Workdir.flathub.yaml  io.github.dseichter.Workdir.metainfo.xml  io.github.dseichter.Workdir.yaml  io.github.dseichter.workdir.flathub.yaml  io.github.dseichter.workdir.yaml
packaging/rpm/: README.md  workdir.spec
search/: search_index.json
src/: Workdir.fbp  about_ui.py  config.json  configuration_ui.py  gui.py  helper.py  icons.py  requirements.txt  resources.qrc  resources_rc.py  settings.py  workdir.py
