[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Workdir"
version = "2026.1.2"
description = "Work with multiple directories and run commands without navigating manually."
readme = "README.md"
authors = [
    { name = "Daniel Seichter" }
]
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]
dependencies = [
    "PySide6>=6.10.2",
    "urllib3>=2.6.3",
    "packaging>=24.0"
]

[project.urls]
Homepage = "https://github.com/dseichter/Workdir"
Documentation = "https://github.com/dseichter/Workdir"
Repository = "https://github.com/dseichter/Workdir"

[tool.setuptools]
py-modules = [
    "about_ui",
    "configuration_ui",
    "gui",
    "helper",
    "icons",
    "resources_rc",
    "settings",
    "workdir",
]

[tool.setuptools.package-dir]
"" = "src"
