[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Workdir"
version = "2026.03.21"
description = "Work with multiple directories and run commands without navigating manually."
readme = "README.md"
authors = [
    { name = "Daniel Seichter", email = "daniel.seichter@dseichter.de" }
]
license = { file = "LICENSE" }
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent"
]
dependencies = [
    "PySide6>=6.10.2",
    "urllib3>=2.6.3",
    "packaging>=26.2"
]

[project.scripts]
workdir = "workdir:main"

[project.urls]
Homepage = "https://github.com/dseichter/Workdir"
Documentation = "https://github.com/dseichter/Workdir"
Repository = "https://github.com/dseichter/Workdir"

[tool.setuptools]
py-modules = [
    "about_ui",
    "configuration_ui",
    "gui",
    "helper",
    "icons",
    "resources_rc",
    "settings",
    "workdir",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.data-files]
"share/applications" = ["packaging/debian/io.github.dseichter.workdir.desktop"]
"share/metainfo" = ["packaging/debian/io.github.dseichter.workdir.metainfo.xml"]
"share/icons/hicolor/48x48/apps" = ["icons/io.github.dseichter.workdir.png"]
"share/pixmaps" = ["icons/io.github.dseichter.workdir.png"]
